WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144211
[WebAudio] AudioContext does not remove user-gesture restriction during resume()
https://bugs.webkit.org/show_bug.cgi?id=144211
Summary
[WebAudio] AudioContext does not remove user-gesture restriction during resume()
Jer Noble
Reported
2015-04-25 20:28:02 PDT
[WebAudio] AudioContext does not remove user-gesture restriction during resume()
Attachments
Patch
(23.91 KB, patch)
2015-04-25 20:41 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(23.86 KB, patch)
2015-04-25 23:15 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(23.82 KB, patch)
2015-04-27 08:13 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2015-04-25 20:41:12 PDT
Created
attachment 251668
[details]
Patch
Jer Noble
Comment 2
2015-04-25 23:15:08 PDT
Created
attachment 251675
[details]
Patch
Jer Noble
Comment 3
2015-04-27 08:13:22 PDT
Created
attachment 251742
[details]
Patch
WebKit Commit Bot
Comment 4
2015-04-27 14:36:16 PDT
Comment on
attachment 251742
[details]
Patch Clearing flags on attachment: 251742 Committed
r183424
: <
http://trac.webkit.org/changeset/183424
>
WebKit Commit Bot
Comment 5
2015-04-27 14:36:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug