Source/WebCore/Modules/webaudio/AudioDestinationNode.cpp
@@ -68,18 +68,6 @@ void AudioDestinationNode::render(AudioBus* sourceBus, AudioBus* destinationBus,
         return;
     }
 
-    if (context()->userGestureRequiredForAudioStart()) {
-        destinationBus->zero();
-        setIsSilent(true);
-        return;
-    }
-
-    if (context()->pageConsentRequiredForAudioStart()) {
-        destinationBus->zero();
-        setIsSilent(true);
-        return;
-    }
-
     // Let the context take care of any business at the start of each render quantum.
     context()->handlePreRenderTasks();
 
