LayoutTests/webaudio/resources/audio-testing.js
@@ -190,3 +190,23 @@ function shouldThrowTypeError(func, text) {
         testFailed(text + " should throw TypeError.");
     }
 }
+
+function runWithKeyDown(fn) 
+{
+    // FIXME: WKTR does not yet support the keyDown() message.  Do a mouseDown here
+    // instead until keyDown support is added.
+    var eventName = !window.testRunner || eventSender.keyDown ? 'keypress' : 'mousedown'
+
+    function thunk() {
+        document.removeEventListener(eventName, thunk, false);
+        fn();
+    }
+    document.addEventListener(eventName, thunk, false);
+
+    if (window.testRunner) {
+        if (eventSender.keyDown)
+            eventSender.keyDown(" ", []);
+        else
+            eventSender.mouseDown();
+    }
+}
